--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Serene Path Labs — Precision you can feel</title>
+  <title>Metro Pathology Lab — Precision you can feel</title>
   <meta name="description" content="Elite, trustworthy pathology services with easy online appointment booking, transparent pricing, and patient-first care." />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='96' height='96' viewBox='0 0 96 96'%3E%3Ccircle cx='48' cy='48' r='44' fill='%23039be5'/%3E%3Cpath d='M48 18c8 8 12 14 12 20 0 8-6 14-12 14s-12-6-12-14c0-6 4-12 12-20z' fill='%23fff'/%3E%3C/svg%3E">
 <style>
