--- a/index.html
+++ b/index.html
@@ -4,8 +4,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Metro Pathology Lab — Precision you can feel</title>
-  <meta name="description" content="Elite, trustworthy pathology services with easy online appointment booking, transparent pricing, and patient-first care." />
+    <title>Metro Pathology Lab | Accurate Diagnostics in Kalyan</title>
+  <meta name="description" content="Metro Pathology Lab in Kalyan offers accurate blood tests, health checkups, and diagnostic services with online booking & home sample collection.">
+
+  <!-- Keywords (less important for Google but helps some search engines) -->
+  <meta name="keywords" content="Pathology Lab Kalyan, Blood Test Kalyan, Diagnostic Centre, Metro Pathology, Health Checkup, Home Collection">
+
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="Metro Pathology Lab | Accurate Diagnostics in Kalyan">
+  <meta property="og:description" content="Book accurate pathology tests in Kalyan with Metro Pathology Lab. Transparent pricing & fast reports.">
+  <meta property="og:image" content="https://yourdomain.com/assets/lab-preview.jpg">
+  <meta property="og:url" content="https://yourdomain.com">
+  <meta property="og:type" content="website">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+  <!-- Schema Markup (Local Business) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MedicalBusiness",
+    "name": "Metro Pathology Lab",
+    "image": "https://yourdomain.com/assets/lab-preview.jpg",
+    "@id": "",
+    "url": "https://yourdomain.com",
+    "telephone": "+91-7506092415",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Building No 2/001, Shankheshwar Kiran, Near Poddar International School, Wayle Nagar, Khadakpada",
+      "addressLocality": "Kalyan",
+      "addressRegion": "MH",
+      "postalCode": "421301",
+      "addressCountry": "IN"
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+      "opens": "07:00",
+      "closes": "22:00"
+    }]
+  }
+  </script>
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='96' height='96' viewBox='0 0 96 96'%3E%3Ccircle cx='48' cy='48' r='44' fill='%23039be5'/%3E%3Cpath d='M48 18c8 8 12 14 12 20 0 8-6 14-12 14s-12-6-12-14c0-6 4-12 12-20z' fill='%23fff'/%3E%3C/svg%3E">
 <style>
 /* ---------- Header / Nav ---------- */
@@ -319,7 +359,7 @@ transition:all .3s ease;
   <section id="about" style="max-width:1100px; margin:0 auto; padding:20px 16px;">
     <div data-animate style="opacity:0; transform:translateY(12px); transition:opacity .8s ease, transform .8s ease;">
       <h2 style="margin:0 0 8px; font-size:28px;">About us</h2>
-      <p style="margin:0 0 10px; color:#406276;">At Metro Pathology Lab, trust isn’t a claim—it’s a practice. From sterile collection to double-verified reporting, we design every detail to feel calm, clear, and human. Our team believes precision and kindness belong together.</p>
+      <p style="margin:0 0 10px; color:#406276;">At Metro Pathology Lab, trust isn’t a claim—it’s a practice. From sterile collection to double-verified reporting, we design every detail to feel calm, clear, and human. Our team believes precision and kindness belong together. We are serving the Kalyan community with precision diagnostics, certified pathologists, and patient-first care.</p>
       <ul style="margin:10px 0; padding-left:18px; color:#35576a;">
         <li>Patient-first design—clear instructions, gentle reminders, real humans.</li>
         <li>Quality controls daily; equipment maintained to stringent standards.</li>
